set up neat grid

--- a/source/layouts/elements/_sidebar.haml
+++ b/source/layouts/elements/_sidebar.haml
@@ -1,14 +1,18 @@
-.Sidebar_menu
+%nav
   %ul
+    %li
+      = link_to 'Home', '/'
     %li
       = link_to 'Services', 'services'
     %li
-      = link_to 'Booking', 'booking'
+      = link_to 'Bio', 'bio'
     %li
       = link_to 'Gallery', 'gallery'
     %li
-      = link_to 'Video', 'video'
-    %li
       = link_to 'Location', 'location'
     %li
-      = link_to 'Contact_Us', 'contact_us'
+      = link_to 'Trichology', 'trichology'
+    %li
+      = link_to 'Contact Us', 'contact_us'
+    %li
+      = link_to 'Job Opportunities', 'job_opportunities'
