--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -1,7 +1,90 @@
-body .background_layout{width:592px;height:146px;position:absolute;left:173px;top:71px;z-index:-1}
-.center_pic_div{position:relative;right:171px;width:880px;height:376px}
-#comment{text-align:left}.coming_soon{font-family:'Comfortaa', sans-serif;margin:0px;left:111px;position:relative;top:71px}
-.coming_soon_phone{font-family:'Comfortaa', sans-serif;position:relative;left:111px;top:60px}
-.alanis,.dancer,.caligula{position:relative;left:125px}
-.first_schedule_div{float:left;margin-right:42px;font-family:'Comfortaa', sans-serif;line-height:25px;color:black;font-size:15px}
-.first_time_div{font-family:'Comfortaa', sans-serif;line-height:25px;color:black;font-size:15px}.first_schedule_div_booking{float:left;margin-right:42px;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;line-height:25px;color:white}.first_time_div_booking{font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;line-height:25px;color:white}.form_div{background-color:#3D4040;color:white;height:347px;float:left;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;font-size:12px;padding:1px 30px 20px 30px;position:relative;width:208px}.form_div h1{font-size:16px;margin-top:21px;font-weight:100;margin-bottom:24px}.form_div p{margin:0px}.gallery_div{position:relative;right:171px;height:381px;width:771px}.iframe{position:relative;width:610px;height:auto;right:171px}#Landing_body_div{margin:204px 1px 0px 245px;height:450px;width:1130px}#location_div_first{margin:0px 38px 0px 15px}#location_div_second{margin-left:16px}#location_div_first,#location_div_second{width:197px;height:180px;position:relative;left:471px;bottom:351px}#location_div_first h1,#location_div_second h1{font-family:'Comfortaa', sans-serif;line-height:25px;color:black;font-size:12px;margin:4px 0 0 0;padding:0}#location_div_first p,#location_div_second p{font-size:15px;font-family:'Comfortaa', sans-serif;font-weight:100;margin:0;padding:0;line-height:22px}#my_form{text-align:right;margin-right:31px}#my_form fieldset{border:none;margin:0px;padding:0}#my_form fieldset label{float:left;text-align:left}.bio_div{font-family:'Comfortaa', sans-serif;position:relative;font-size:14px;z-index:0;height:322px;padding:14px 1px 1px 1px;right:141px;width:1213px}.p_index{font-family:'Comfortaa', sans-serif;position:relative;right:158px;top:0px;font-size:14px;z-index:0;height:322px;padding:14px 1px 1px 1px}.price_div{position:relative;text-align:center;right:61px}.price_div_prices{position:relative;bottom:22px}.second_time_div{color:black;font-family:'Comfortaa', sans-serif;font-size:15px;line-height:25px}.second_schedule_div{float:left;margin-right:81px;font-family:'Comfortaa', sans-serif;line-height:25px;color:black;font-size:15px}.second_time_div_booking{font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;line-height:25px;color:white}.second_schedule_div_booking{float:left;margin-right:69px;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;line-height:25px;color:#fff}.services_pic{position:relative;float:left}.services_pic_div{position:relative;right:181px;width:1015px;height:358px}.services_div{float:left;margin-right:71px;position:relative;bottom:21px;margin-left:329px}.Sidebar_menu{float:left;text-align:right;margin:15px 26px 1px 0px;font-family:'Comfortaa', sans-serif;font-size:14px;line-height:25px;position:relative;right:181px;z-index:1}.Sidebar_menu ul li{list-style-type:none}a{text-decoration:none;color:black}.video_frame{float:left;position:relative;bottom:173px;left:151px}#what_we_do{margin:0px 20px 0px 125px}#who_we_are{margin-left:16px}#who_we_are,#what_we_do{width:797px;height:282px;position:relative;left:21px;bottom:302px}#who_we_are h1,#what_we_do h1{font-family:'Comfortaa', sans-serif;line-height:25px;color:black;font-size:12px;margin:4px 0 0 0;padding:0;position:relative;left:329px;width:160px;bottom:31px}#who_we_are p,#what_we_do p{font-size:12px;font-family:'Comfortaa', sans-serif;font-weight:100;margin:0;padding:0;line-height:22px}#Woman_star_div{position:relative;right:181px;z-index:2}.woman_star{position:relative;float:left}.actions{border:none;position:relative;left:313px;bottom:42px}.border_div{width:419px;position:relative;right:171px;height:375px}.comment_field{float:left;position:relative;right:1px}.comment_label{bottom:68px;position:relative}.comment_text_area{height:76px;width:170px}.contact_us_div{width:210px;height:151px;position:relative;text-align:center;left:560px;bottom:354px}.fields{background-color:#3D4040;border:none;color:white;float:left;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue" sans-serif;font-size:12px;height:355px;padding:1px 30px 20px 30px;position:relative;width:229px}.field{text-align:right}.fieldset_div_wrapper{position:relative;right:11px;text-align:right}.first_schedule_div_booking{color:white;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;float:left;line-height:25px;margin-right:42px}.first_time_div_booking{color:white;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;line-height:25px}.form_header{font-size:21px;text-decoration:none;font-weight:100}form{position:relative;left:3px}.or{position:relative;float:left;left:47px;font-family:'Comfortaa', sans-serif;bottom:227px}.second_time_div_booking{color:white;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;line-height:25px}.second_schedule_div_booking{float:left;margin-right:69px;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;line-height:25px;color:#fff}
+@import 'bourbon';
+@import "neat";
+@import "variables";
+@import "nav"; 
+
+.wrap{
+  @include outer-container;
+  //max-width: 80em;
+}
+
+.header{
+	@include row(); 
+	@include shift(1);
+	margin-top:50px;
+	
+	@media #{$mq-tablet-mobile}{
+		@include shift(0);
+		img{
+			width: 100%;
+		}
+	}
+}
+
+ 
+
+.content{
+	
+	@include row();
+	@include span-columns(12);
+}
+.container{ 
+	@include span-columns(9.5);
+	float: left;
+	position: relative;
+	font-family: 'Comfortaa', sans-serif;
+	font-size: 14px;
+	padding: 14px 0px 0px 0px;
+	p{
+		margin-left: 25px;
+	}
+	
+	@media #{$mq-tablet-mobile}{
+		@include span-columns(12);
+		font-size: 18px;
+		padding: 0 15px;
+		p{
+			margin-left: 0;
+		}
+	}
+}
+.image-container{
+	float: left;
+	margin-right: 50px;
+	width: 54%;
+	img{
+		position: relative;
+		width: 100%;
+		left: 25px;
+	}
+	@media #{$mq-tablet}{
+		float: none; 
+		width: 93%;
+	}
+	@media #{$mq-tablet-mobile}{
+		margin: 15px 0;
+		width: 100%;
+
+		img{
+			left:0;
+		}
+	}
+}
+
+.p_index{
+	font-family: 'Comfortaa', sans-serif;
+	position: relative;
+	right: 158px;
+	top: 0px;
+	font-size: 14px;
+	z-index: 0;
+	height: 322px;
+	padding: 14px 1px 1px 1px;
+}
+.services{
+	float: left;
+}
+.prices{
+	margin-top: 37px;
+	text-align: center;
+}
