--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -38,3 +38,9 @@ $tablet-landscape:          "screen and (max-width: 50em) and (orientation: land
 $mobile:                    "screen and (max-width: 30em)";
 $mobile-portrait:           "screen and (max-width: 30em) and (orientation : portrait)";
 $mobile-landscape:          "screen and (max-width: 30em) and (orientation : landscape)";
+
+
+$mq-desktop: "only screen and (min-width: 769px)"; 
+$mq-tablet-mobile: "only screen and (max-width: 641px) and (min-width: 1px)";
+$mq-tablet: "only screen and (max-width: 840px) and (min-width: 642px)";
+$mq-mobile: "only screen and (max-width : 641px) and (min-width : 1px)";
