--- a/source/trichology.html.haml
+++ b/source/trichology.html.haml
@@ -7,5 +7,5 @@
 
 %p It is best to discover the origin of hair loss by scheduling a complementary in-person consultation. In order to determine an appropriate treatment regimen, it is necessary to first identify your specific type of hair loss as well as the root cause(s) that may be responsible .
 
-%h3 Consulation
+%h3 Consultation
 %p During your private and confidential comprehensive evaluation, we take a full case history by specifically detailing health, diet, stress, lifestyle, and environmental influences on your hair and scalp.
