--- a/source/location.html.haml
+++ b/source/location.html.haml
@@ -1,11 +1,12 @@
-.image-container
+.media-container
   %iframe{:frameborder => "0", :height => "375", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=5927+Franklin+Avenue,+Los+Angeles,+CA&aq=0&oq=5927+franklin+ave.&sll=37.0625,-95.677068&sspn=42.631141,93.076172&ie=UTF8&hq=&hnear=5927+Franklin+Ave,+Los+Angeles,+California+90068&t=m&ll=34.105267,-118.319321&spn=0.026651,0.040684&z=14&iwloc=A&output=embed", :width => "475"}
   %br/
   %small
     %a{:href => "http://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=5927+Franklin+Avenue,+Los+Angeles,+CA&aq=0&oq=5927+franklin+ave.&sll=37.0625,-95.677068&sspn=42.631141,93.076172&ie=UTF8&hq=&hnear=5927+Franklin+Ave,+Los+Angeles,+California+90068&t=m&ll=34.105267,-118.319321&spn=0.026651,0.040684&z=14&iwloc=A", :style => "color:#0000FF;text-align:left"}
-%h1 Address
-%p 5927 Franklin Ave
-%p Los Angeles, CA 90028
-%p (323) 461-5500
-%h1 Schedule
-%p Tue - Sat   10.00 - 17.00
+.text-wrap   
+  %h3 Address
+  %p 5927 Franklin Ave
+  %p Los Angeles, CA 90028
+  %p (323) 461-5500
+  %h3 Schedule
+  %p Tue - Sat   10.00 - 17.00
