updated page content

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,5 +3,6 @@
 		=image_tag 'Woman_star.jpg', :alt => 'Woman Star', :class => 'homepage'
 
 %p In Los Angeles, a town where special treatment is too often reserved for celebrities, Salon Duarte has broken all the rules and invites every customer to have the ultimate salon experience.
-%p Salon Duarte is a spanish style salon offering a full range of color, cuts and styling services using the latest hair care products from Leonor Greyl. The European ideal behind the salon evokes a fashion-forward yet comfortable atmosphere where clients are treated to top quality services.
+%p Salon Duarte is a spanish style salon and <strong><a href="/trichology">Trichology</a></strong> Hair Institue offering a full range of color, cuts and styling haircare products and services. We also offer Trichology services using the latest hair care products from <a href='http://www.leonorgreyl-usa.com/leonor-greyl-customized-hairspa-treatment-centers/' target="_blank">Leonor Grey</a>, Evolution Hair, and Igrowlaser. The European ideal behind the salon evokes a fashion-forward yet comfortable atmosphere where clients are treated to top quality services.
+
 %p Our salon features a unique style of service where each appointment begins with a consultation to create and foster individual beauty of the client. Individuals are then treated to world-class service including haircuts, color, chemical & conditioning treatments, hair extensions and more according to personal needs.
