--- a/source/job_opportunities.html.haml
+++ b/source/job_opportunities.html.haml
@@ -1,2 +1,2 @@
-%p.coming_soon eva@duartesalon.com
-%p.coming_soon_phone 323-461-5500
+%h3 Job Opportunities
+%p At Duarte we are looking for dedicated employees to help us. If you are interested email eva@duartesalon.com
