--- a/source/services.html.haml
+++ b/source/services.html.haml
@@ -1,6 +1,6 @@
 .image-container
   = image_tag 'services.png', :alt => 'Services Picture'
-#what_we_do
+.what-we-do
   %h3 Services
   .services
     %p Haircut
@@ -12,6 +12,7 @@
     %p Brazilian Blowout
     %p Customized Treatment
     %p Mini-Spa Treatment
+    %p Trichology Consulation
     %p *Blow dry not included
   .prices
     %p 185.
@@ -22,4 +23,5 @@
     %p 150.
     %p 350.
     %p 150.*
-    %p 45-65*
+    %p 45-65.*
+    %p 75.
