--- a/source/trichology.html.haml
+++ b/source/trichology.html.haml
@@ -1,7 +1,7 @@
 %h3 Trichology
-%p Trichology is a branch that deals with the scientific study and health of the hair and scalp. Trichologists are hair and scalp specialists who diagnose the causes of hair loss, breakage, thinning, miniaturization, diseases of the scalp, and all treatments are according to cause.
+%p <a href='http://www.worldtrichologysociety.org/what-is-trichology' target="_blank">Trichology</a> is a branch that deals with the scientific study and health of the hair and scalp. Trichologists are hair and scalp specialists who diagnose the causes of hair loss, breakage, thinning, miniaturization, diseases of the scalp, and all treatments are according to cause.
 
-%p We are a proud member of the World Trichology Society,  a  professional  organization  dedicated to educating, supporting, and promoting Trichology in North America and Worldwide. We are committed to helping the public by educating them about the possible causes of their hair loss and by informing them of their choices treatments .
+%p We are a proud <a href='http://www.worldtrichologysociety.org/members' target="_blank">member of the World Trichology Society</a>, a  professional  organization  dedicated to educating, supporting, and promoting Trichology in North America and Worldwide. We are committed to helping the public by educating them about the possible causes of their hair loss and by informing them of their choices treatments.
 
 %p Not all hair loss is permanent, there are many hair loss conditions that can be slowed, halted or even reversed. The first step is finding out all of the causes responsible for your hair loss. Treatment is then provided for each one of those causes. This means a multifaceted, customized treatment regimen may be necessary to achieve best results.
 
