--- a/source/contact_us.html.haml
+++ b/source/contact_us.html.haml
@@ -1,2 +1,4 @@
-%p.coming_soon eva@duartesalon.com
-%p.coming_soon_phone 323-461-5500
+%h3 Email
+%p eva@duartesalon.com
+%h3 Telephone
+%p 323-461-5500
