updated photos and content

--- a/source/contact_us.html.haml
+++ b/source/contact_us.html.haml
@@ -1,4 +1,8 @@
-%h3 Email
-%p eva@duartesalon.com
-%h3 Telephone
-%p 323-461-5500
+.image-container
+  = image_tag 'contact-1.jpg', :alt => 'Phone Picture', :class => 'contact-image'
+  = image_tag 'contact-2.jpg', :alt => 'Phone Picture', :class => 'contact-image'
+.text-wrap   
+  %h3.underline Email
+  %p eva@duartesalon.com
+  %h3.underline Telephone
+  %p 323-461-5500
