--- a/source/job_opportunities.html.haml
+++ b/source/job_opportunities.html.haml
@@ -1,2 +1,6 @@
-%h3 Job Opportunities
-%p At Duarte we are looking for dedicated employees to help us. If you are interested email eva@duartesalon.com
+.image-container
+	=image_tag 'unknown.jpg', :alt => 'Salon'
+
+%header.right
+	%h3.underline-extended Job Opportunities
+	%p At Duarte we are actively looking for hair colorists and cutters to join our team. If you are interested email eva@duartesalon.com with a copy of your resume.
