--- a/source/layouts/elements/_sidebar.haml
+++ b/source/layouts/elements/_sidebar.haml
@@ -1,5 +1,5 @@
 %nav
-  %ul
+  %ul.nav
     %li
       = link_to 'Home', '/'
     %li
@@ -11,7 +11,7 @@
     %li
       = link_to 'Location', 'location'
     %li
-      = link_to 'Trichology', 'trichology'
+      = link_to 'Hair Institute', 'trichology'
     %li
       = link_to 'Contact Us', 'contact_us'
     %li
