--- a/source/services.html.haml
+++ b/source/services.html.haml
@@ -1,7 +1,7 @@
 .image-container
-  = image_tag 'services.png', :alt => 'Services Picture'
-.what-we-do
-  %h3 Services
+  = image_tag 'wind.jpg', :alt => 'Services Picture'
+.services-container
+  %h2.underline Services
   .services
     %p Haircut
     %p Highlights
@@ -24,4 +24,4 @@
     %p 350.
     %p 150.*
     %p 45-65.*
-    %p 75.
+    %p Complementary
