--- a/source/trichology.html.haml
+++ b/source/trichology.html.haml
@@ -1,11 +1,59 @@
-%h3 Trichology
+%header
+	%h2.underline Hair Institute
+.image-container-small
+	=image_tag 'institute.jpg', :alt => 'Hair institute'
+%header.left
+	%h3.underline Trichology
 %p <a href='http://www.worldtrichologysociety.org/what-is-trichology' target="_blank">Trichology</a> is a branch that deals with the scientific study and health of the hair and scalp. Trichologists are hair and scalp specialists who diagnose the causes of hair loss, breakage, thinning, miniaturization, diseases of the scalp, and all treatments are according to cause.
 
-%p We are a proud <a href='http://www.worldtrichologysociety.org/members' target="_blank">member of the World Trichology Society</a>, a  professional  organization  dedicated to educating, supporting, and promoting Trichology in North America and Worldwide. We are committed to helping the public by educating them about the possible causes of their hair loss and by informing them of their choices treatments.
+%p We are a proud <a href='http://www.worldtrichologysociety.org/members' target="_blank">member of the World Trichology Society</a>, a  professional  organization  dedicated to educating, supporting, and promoting Trichology in North America and Worldwide. We are committed to helping the public by educating them about the possible causes of their hair loss and by informing them of their choice and treatments.
 
 %p Not all hair loss is permanent, there are many hair loss conditions that can be slowed, halted or even reversed. The first step is finding out all of the causes responsible for your hair loss. Treatment is then provided for each one of those causes. This means a multifaceted, customized treatment regimen may be necessary to achieve best results.
 
+%h3.underline Consultation
 %p It is best to discover the origin of hair loss by scheduling a complementary in-person consultation. In order to determine an appropriate treatment regimen, it is necessary to first identify your specific type of hair loss as well as the root cause(s) that may be responsible .
 
-%h3 Consultation
 %p During your private and confidential comprehensive evaluation, we take a full case history by specifically detailing health, diet, stress, lifestyle, and environmental influences on your hair and scalp.
+
+%h2.center Hair Institute Treatments
+
+%p Leonor Greyl Treatemnts are individually prescribed to bring about spectacular shine and vitality to your hair by combining 100% natural vegetabal oils and plant extracts. There is a specific treatment for every scalp condition, even the most challenging!
+
+What makes our customized treatments unique?
+%ul
+	%li Diagnosis of scalp and hair with a micro-camera
+	%li Tailor-made scalp and hair treatment prepared in front of client
+	%li All treatment applied to dry scalp and hair
+	%li scalp treatments replace shampoo
+	%li Leave-in treatments help prolong the treatment benefits
+	%li Results are immediate
+	%li Unique and unforgettable experience
+
+%h4 Treatments
+
+%ul
+	%li Brilliance Treatment-  Dry and lifeless hair
+	%li Purifying and Calming Treatment-  Flaking, Irritated or Sensitive Scalp
+	%li Balancing Treatment- Oily Scalp and Hair
+	%li Volumizing Treatment- Hair Loss and Thinning Hair
+	%li S.O.H. Treatments- Severely Damaged Hair
+	%li Just for Men Treatment- Devitalized Scalp and/or Hair Loss
+	
+%h4 Mini Treatments*
+%ul
+	%li Cult
+	%ul
+		%li Huile de Palme: This perfect blend of botanical oils gently breaks down product buildup, adds shine, softens and pre-detangles hair. 
+		%li Regenerescence Naturelle: The regenerative properties and benefits in this blend of essential oils purify and increase scalp blood circulation.
+	%li Mini S.O.H.
+	%ul
+		%li Masque Quintessence: The ultimate weapon for desparate hair! Cupuacu and Manketti Oils combine to counteract the harsh effects of bleaching, highlighting and straightening can cause to the hair. Its nourishing nectar revitalizes, regenerates and repairs even the most damaged hair leaving it shiny, supple and manageable.
+	%li Signature
+	%ul
+		%li Huile de Palme: This perfect blend of botanical oils gently breaks down product buildup, adds shine, softens and pre-detangles hair. 
+		%li Crème aux Fleurs: The natural Sage and Chamomile in this (washing) treatment were specifically selected for their calming and soothing effects. This deep treatment is ideal for dry, color-treated and/or frizzy hair and scalps prone to sensitivity. 
+
+%p <small>*Mini Treatments are performed after regular treatment</small>
+
+.center
+	<iframe class="" src="//player.vimeo.com/video/92828313" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
