added sub nav to hair institute page

--- a/source/layouts/elements/_sidebar.haml
+++ b/source/layouts/elements/_sidebar.haml
@@ -11,7 +11,7 @@
     %li
       = link_to 'Location', 'location'
     %li
-      = link_to 'Hair Institute', 'trichology'
+      = link_to 'Hair Institute', 'hair_institute'
     %li
       = link_to 'Contact Us', 'contact_us'
     %li
