--- a/source/services.html.haml
+++ b/source/services.html.haml
@@ -1,4 +1,4 @@
-.image-container
+.image-container-small
   = image_tag 'wind.jpg', :alt => 'Services Picture'
 .services-container
   %h2.underline Services
