--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -3,8 +3,9 @@
   %title Duarte Salon
   %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-type"}
   %link{:href => "stylesheets/style.css", :media => "screen", :rel => "stylesheet", :title => "style", :type => "text/css"}
-  %link{:href => "http://fonts.googleapis.com/css?family=Comfortaa:300", :rel => "stylesheet", :type => "text/css"}
-  %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"}
+  %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:400,700", :rel => "stylesheet", :type => "text/css"}
+  %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"}
+  %script{:type => "text/javascript", :src => "javascripts/all.js"}
   =csrf_meta_tags
 
 %body 
