--- a/source/contact_us.html.haml
+++ b/source/contact_us.html.haml
@@ -1,6 +1,10 @@
-.image-container
-  = image_tag 'contact-1.jpg', :alt => 'Phone Picture', :class => 'contact-image'
-  = image_tag 'contact-2.jpg', :alt => 'Phone Picture', :class => 'contact-image'
+---
+image: contact
+title: Contact Us
+---
+/.image-container
+/  = image_tag 'contact-1.jpg', :alt => 'Phone Picture', :class => 'contact-image'
+/  = image_tag 'contact-2.jpg', :alt => 'Phone Picture', :class => 'contact-image'
 .text-wrap   
   %h3.underline Email
   %p eva@duartesalon.com
