--- a/source/hair_institute.html.haml
+++ b/source/hair_institute.html.haml
@@ -1,5 +1,7 @@
-%header
-	%h2.underline Hair Institute
+---
+image: woman
+title: Hair Institute
+--- 
 %ul.sub-nav
 	%li
 		= link_to 'Trichology', '#trichology'
@@ -9,8 +11,8 @@
 		= link_to 'Treatments', '#hair_institute_treatments'
 	%li
 		= link_to 'Mini Treatments', '#mini_treatments'
-.image-container-small
-	=image_tag 'institute.jpg', :alt => 'Hair institute'
+/.image-container-small
+/	=image_tag 'institute.jpg', :alt => 'Hair institute'
 %header.left
 	%h3#trichology.underline Trichology
 %p <a href='http://www.worldtrichologysociety.org/what-is-trichology' target="_blank">Trichology</a> is a branch that deals with the scientific study and health of the hair and scalp. Trichologists are hair and scalp specialists who diagnose the causes of hair loss, breakage, thinning, miniaturization, diseases of the scalp, and all treatments are according to cause.
