--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,6 +1,10 @@
-.image-container
-	%a.image
-		=image_tag 'services.png', :alt => 'Woman Star', :class => 'homepage'
+---
+image: home 
+title: Duarte Salon
+---
+/.image-container
+/	%a.image
+/		=image_tag 'services.png', :alt => 'Woman Star', :class => 'homepage'
 
 %p In Los Angeles, a town where special treatment is too often reserved for celebrities, Salon Duarte has broken all the rules and invites every customer to have the ultimate salon experience.
 
