--- a/source/job_opportunities.html.haml
+++ b/source/job_opportunities.html.haml
@@ -1,5 +1,9 @@
-.image-container
-	=image_tag 'unknown.jpg', :alt => 'Salon'
+---
+image: job-opportunities
+title: Job Opportunities
+---
+/.image-container
+/	=image_tag 'unknown.jpg', :alt => 'Salon'
 
 %header.right
 	%h3.underline-extended Job Opportunities
