--- a/source/layouts/elements/_sidebar.haml
+++ b/source/layouts/elements/_sidebar.haml
@@ -1,4 +1,4 @@
-%nav
+%nav.pushy.pushy-left
   %ul.nav
     %li
       = link_to 'Home', '/'
@@ -16,3 +16,7 @@
       = link_to 'Contact Us', 'contact_us'
     %li
       = link_to 'Job Opportunities', 'job_opportunities'
+ 
+ 
+
+
