--- a/source/location.html.haml
+++ b/source/location.html.haml
@@ -1,5 +1,9 @@
-.image-container
-  =image_tag 'salon.jpg', :alt => 'Salon'
+---
+image: location
+title: Job Opportunities
+---
+/.image-container
+/  =image_tag 'salon.jpg', :alt => 'Salon'
 .text-wrap   
   %h3.underline Address
   %p 5927 Franklin Ave
