--- a/source/services.html.haml
+++ b/source/services.html.haml
@@ -1,5 +1,9 @@
-.image-container-small
-  = image_tag 'wind.jpg', :alt => 'Services Picture'
+---
+image: services
+title: Services
+---
+/.image-container-small
+/  = image_tag 'wind.jpg', :alt => 'Services Picture'
 .services-container
   %h2.underline Services
   .services
