--- a/source/gallery.html.haml
+++ b/source/gallery.html.haml
@@ -1,3 +1,7 @@
+---
+image: gallery
+title: Gallery
+---
 .media-container
   <div   ><object width="500" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"  codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"> <param name="flashvars" value="offsite=true&amp;lang=en-us&amp;page_show_url=%2Fphotos%2Fsalonduarte%2Fshow&amp;page_show_back_url=%2Fphotos%2Fsalonduarte%2F&amp;user_id=23915325@N08" /> <param name="allowFullScreen" value="true" /> <param name="src" value="https://www.flickr.com/apps/slideshow/show.swf?v=71649" /> <embed width="500" height="500" type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=71649" flashvars="offsite=true&amp;lang=en-us&amp;page_show_url=%2Fphotos%2Fsalonduarte%2Fshow&amp;page_show_back_url=%2Fphotos%2Fsalonduarte%2F&amp;user_id=23915325@N08" allowFullScreen="true" /> </object><br /></div>
 :javascript
