--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -5,11 +5,66 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
-
-.wrap{
-  @include outer-container;
-  //max-width: 80em;
+html, body{
+	overflow-x: hidden;  
+    -webkit-tap-highlight-color: rgba(0,0,0,0);  
+    height: 100%;
+	margin: 0;
 }
+.pushy{
+    width: 200px; /* Changed the width to 400px */
+
+    transition: 1s;
+}
+
+.pushy-left{
+    transform: translate3d(-400px,0,0); 
+    transition: 1s;
+}
+
+.container-push, .push-push{
+    transform: translate3d(400px,0,0); /* Updated the values */
+    /* Don't forget the vendor prefixes */
+}
+
+.top{
+	height: 50vw;
+	position: relative;
+}
+.title{
+	position: absolute;
+	left: 50%;
+	top: 80%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	z-index: 1;
+	text-align: center;
+
+	h1{
+
+	}
+}
+
+.hero{
+	position: absolute;
+	background: #191918;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 50vw;
+	pointer-events: none;
+
+}
+
+.image-head{
+	background-position: center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height: 100%;
+}
+ 
 .header{
 	@include row(); 
 	@include shift(2);
@@ -23,16 +78,18 @@
 	}
 }
 .content{
-	@include row();
-	@include span-columns(12);
+	@include outer-container;
+  	max-width: 60em; 
 }
 .container{ 
-	@include span-columns(10);
+	
+	@include row();
+	@include span-columns(12);
 	float: left;
 	position: relative;
 	font-family:  open sans, sans-serif;
 	font-size: 14px;
-	padding: 14px 0px 0px 25px;
+	padding: 14px 0px 0px 0px;
 	
 	@media #{$mq-mobile}{
 		@include span-columns(12);
@@ -132,3 +189,4 @@ h2.underline-extended{
 .center, .video{
 	text-align: center;
 }
+@import 'pushy';
